Created scripts for snake env in gym. Added new lines to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ models/*
 .ipynb_checkpoints/*
 checkpoint
 *.h5f.*
+snake/gymsnake.egg-info/*
+snake/snake/__pycache__/*
+snake/snake/envs/__pycache__/*
